--- a/src/com/BilsemEtkinlik/GUI/EtkinlikSorusuEkle.form
+++ b/src/com/BilsemEtkinlik/GUI/EtkinlikSorusuEkle.form
@@ -50,6 +50,12 @@
                 <Column editable="true" title="Soru" type="java.lang.String"/>
               </Table>
             </Property>
+            <Property name="showHorizontalLines" type="boolean" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="true" type="code"/>
+            </Property>
+            <Property name="showVerticalLines" type="boolean" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="true" type="code"/>
+            </Property>
           </Properties>
           <Events>
             <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="tblSoruEkleKeyPressed"/>
